--- a/index.html
+++ b/index.html
@@ -80,7 +80,16 @@
                 <div id="room-badge">Room: ???</div>
                 <div id="word-display" style="font-size:2rem; font-family:'Bangers'; color:var(--dark);">WAITING...
                 </div>
+                <div id="round-display" class="timer-badge"></div>
                 <button class="btn-exit" onclick="exitRoom()">🚪 Exit</button>
+            </div>
+
+            <!-- HOST CONTROLS -->
+            <div style="text-align:center; margin:10px 0;">
+                <button id="start-game-btn" class="btn-big btn-primary" onclick="startGame()" style="display:none;">🎮
+                    START GAME</button>
+                <button id="new-game-btn" class="btn-big btn-secondary" onclick="newGame()" style="display:none;">🔄
+                    PLAY AGAIN</button>
             </div>
 
             <div style="display:flex; gap:20px; flex-wrap: wrap;">
